[package]
name = "wasmyroute"
version = "0.1.0"
authors = ["Angus Chiu"]
description = "Offline Turn-based Navigation for trail and cycling routes"
license = "MIT Or Apache-2.0"
repository = "https://github.com/anguschiu1/wasmybikeroute.git"
edition = "2021"

[dependencies]
console_log = { version = "1.0.0", features = ["color"] }
log = "0.4.20"
seed = "0.9.2"
web-sys = "0.3.65"
leaflet = "0.4"
quick-xml = { version = "0.22.0", features = ["serialize"] }
serde = "1.0.197"
gloo-events = "0.2.0"
