[package]
name = "wasmyroute"
version = "0.1.0"
edition = "2021"
authors = ["Angus Chiu"]
readme = "README.md"
description = "Offline Turn-based Navigation for trail and cycling routes"
license = "MIT"
repository = "https://github.com/anguschiu1/wasmybikeroute.git"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming", "navigation"]

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
console_log = { version = "1.0.0", features = ["color"] }
log = "0.4.20"
js-sys = "0.3"
web-sys = { version = "0.3.65", features = [
  "Coordinates",
  "Position",
  "PositionError",
  "Geolocation",
  "PositionOptions",
  "Navigator",
] }
leaflet = "0.4"
rand = "0.8.5"
gpx = "0.10.0"
gloo-utils = "0.2.0"
